fix: Popup - improved set visible position logic

--- a/src/components/Popup/Popup.styl
+++ b/src/components/Popup/Popup.styl
@@ -78,7 +78,7 @@ $contentShadow = inset 0 0 0 1px var(--accent-color-alpha-100)
 
 .animating
   transition 70ms ease-out
-  transition-property transform, opacity
+  transition-property transform, opacity, margin
 
 // Directions:
 
